# packages/admin/core/serialization/resources/coreAgent/types/index.js
@@ -17,8 +17,10 @@ Object.defineProperty(exports, "__esModule", { value: true });
 __exportStar(require("./AgentId"), exports);
 __exportStar(require("./AgentObjectType"), exports);
 __exportStar(require("./AgentActiveStatus"), exports);
-__exportStar(require("./AgentName"), exports);
 __exportStar(require("./AgentDescription"), exports);
+__exportStar(require("./AgentDisplayDescription"), exports);
+__exportStar(require("./AgentDisplayName"), exports);
+__exportStar(require("./AgentName"), exports);
 __exportStar(require("./AgentCreateParams"), exports);
 __exportStar(require("./AgentUpdateParams"), exports);
 __exportStar(require("./Agent"), exports);
